--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@
     color: #fff;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+    background: #040714;
+    overflow: visible;
+}
