--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -1,6 +1,9 @@
 .login-background{
     min-height: calc(100vh-70px);
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
 }
@@ -12,4 +15,42 @@
     bottom: -10px;
     z-index: -1;
     height: 96.3%;
+}
+.cta-logos{
+    min-width: 500px;
+    max-width: 700px;
+    margin-top: -5%;
+    display: flex;
+    flex-direction: column;
+}
+
+.signup{
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 15px;
+    margin-bottom: 12px;
+    height: 45px;
+    background: #0063e5;
+    border :none;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    letter-spacing: 1.5px;
+    font-size: 15px;
+    font-weight: 500;
+}
+.signup:hover{
+    background: #0483ee;
+}
+.signup-description{
+    width: 95%;
+    font-size :11px;
+    text-align: center;
+    letter-spacing: 1.5px;
+    margin-left: 8px;
+    margin-bottom: 15px;
+}
+.cta-logo-two{
+    width: 100%;
 }
